@@ -1,3 +1,8 @@
+2008-11-01		olivier
+
+	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Avoid duplication
+	  of code.
+
 2008-10-31		olivier
 
 	* dialogs/keyboard-settings/xfce-keyboard-settings.c: Disable keyboard
